# eag8

./: README.md
agent_e8/: README.md  agent.py  pyproject.toml
agent_e8/config/: profiles.yaml
agent_e8/core/: loop.py  session.py  sse_client.py
agent_e8/documents/: SAMPLE-Indian-Policies-and-Procedures-January-2023.docx
agent_e8/mcp_server/: mcp_server_1.py  mcp_server_2.py  mcp_server_3.py
agent_e8/mcp_server/documents/: Experience Letter.docx  SAMPLE-Indian-Policies-and-Procedures-January-2023.docx
agent_e8/modules/: action.py  decision.py
gmail-sse/: README.md  main.py  pyproject.toml
gmail-sse/src/gmail/: gmail_mcp_server.py  gmail_sse_server.py
mcp-sse/: pyproject.toml
mcp-sse-gdrive/: .gitignore  README.md  google_drive_sse_test_client.py  main.py  pyproject.toml
mcp-sse-gdrive/src/mcp_sse_gdrive/: __init__.py  google_drive_service.py  google_drive_sse_server.py
mcp-sse-gmail/: README.md  main.py  pyproject.toml
mcp-sse-gmail/src/gmail/: __init__.py  gmail_mcp_server.py  gmail_sse_server.py  gmail_sse_test_client.py
mcp-sse-sample/: server.py
mcp-sse-telegram/: .gitignore  README.md  chat_ids.json  main.py  pyproject.toml  telegram_sse_server.py  telegram_sse_test_client.py
mcp-telegram/: README.md  telegram_sse_server.py
mcp_gmail/src/gmail/: gmail_mcp_server.py  gmail_sse_server.py  gmail_sse_test_client.py
sample/: agent.py  mcp_server_3.py
sample/config/: log_config.py  profiles.yaml
sample/core/: session.py
sample/documents/: Experience Letter.docx
sample/modules/: perception.py
