[project]
name = "mcp-sse-gmail"
version = "0.1.0"
description = "Gmail SSE server with FastAPI and Google API integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "fastmcp>=2.1.2",
    "uvicorn>=0.22.0",
    "httpx>=0.28.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "requests>=2.0.0",
    "requests-oauthlib>=1.3.0",
    "beautifulsoup4>=4.9.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.34.1"
]